<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_medium">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/medicine_id_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_medicine_id"
            android:autofillHints=""
            android:inputType="text"
            android:padding="@dimen/padding_small"
            android:textSize="@dimen/text_size_medium"/>

        <EditText
            android:id="@+id/user_id_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_user_id"
            android:autofillHints=""
            android:inputType="text"
            android:padding="@dimen/padding_small"
            android:textSize="@dimen/text_size_medium"/>

        <EditText
            android:id="@+id/function_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_function"
            android:autofillHints=""
            android:inputType="text"
            android:padding="@dimen/padding_small"
            android:textSize="@dimen/text_size_medium"/>

        <EditText
            android:id="@+id/usage_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_usage"
            android:autofillHints=""
            android:inputType="text"
            android:padding="@dimen/padding_small"
            android:textSize="@dimen/text_size_medium"/>

        <EditText
            android:id="@+id/note_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="text"
            android:hint="@string/hint_note"
            android:padding="@dimen/padding_small"
            android:textSize="@dimen/text_size_medium"/>

        <EditText
            android:id="@+id/storage_condition_input"
            android:layout_width="match_parent"
            android:autofillHints=""
            android:inputType="text"
            android:layout_height="wrap_content"
            android:hint="@string/storage_condition"/>

        <EditText
            android:id="@+id/ingredients_input"
            android:layout_width="match_parent"
            android:autofillHints=""
            android:inputType="text"
            android:layout_height="wrap_content"
            android:hint="@string/ingredients"/>

        <EditText
            android:id="@+id/meal_schedule_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="number"
            android:hint="@string/meal_schedule"/>

        <EditText
            android:id="@+id/quantity_left_input"
            android:layout_width="match_parent"
            android:autofillHints=""
            android:layout_height="wrap_content"
            android:hint="@string/quantity_left"
            android:inputType="number"/>

        <EditText
            android:id="@+id/warehouse_no_input"
            android:layout_width="match_parent"
            android:autofillHints=""
            android:inputType="number"
            android:layout_height="wrap_content"
            android:hint="@string/warehouse_no"/>

        <EditText
            android:id="@+id/times_per_day_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/times_per_day"
            android:inputType="number"/>

        <Button
            android:id="@+id/button_add_medicine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_save"
            android:backgroundTint="@color/primary_color"
            android:textSize="@dimen/text_size_medium"
            android:layout_marginTop="@dimen/padding_medium"/>
    </LinearLayout>
</ScrollView>
