<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/user_id_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/hint_user_id" />

        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/age_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/age"
            android:inputType="number" />

        <EditText
            android:id="@+id/gender_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/gender_0_for_female_1_for_male"
            android:inputType="number" />

        <EditText
            android:id="@+id/role_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/role_e_g_1_for_admin_2_for_user"
            android:inputType="number" />

        <Button
            android:id="@+id/save_user_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_user"
            android:layout_marginTop="16dp" />
    </LinearLayout>
</ScrollView>
